# taew-py

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  HELLO_TAEW_PY.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: issue-close.md  issue-new.md
docs/: HELLO_TAEW_CALUDE.md
scripts/: ask-all.sh  checkpoint.sh  issue-assign-branch.sh  issue-close.sh  issue-new.sh
taew/: __init__.py
taew.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
taew/adapters/: __init__.py
taew/adapters/cli/: for_starting_programs.py
taew/adapters/launch_time/: for_binding_interfaces.py
taew/adapters/python/: __init__.py
taew/domain/: argument.py  cli.py  cli_test.py  configuration.py  function.py  json.py  logging.py  marshalling.py
taew/ports/: for_binding_interfaces.py  for_browsing_code_tree.py  for_building_command_parsers.py  for_building_config_ports_mapping.py  for_configuring_adapters.py  for_executing_commands.py  for_finding_configurations.py  for_logging.py  for_marshalling_objects.py  for_obtaining_current_datetime.py  for_serializing_objects.py  for_starting_programs.py  for_storing_data.py  for_streaming_objects.py  for_stringizing_objects.py
taew/utils/: cli.py  configure.py  int.py  ports.py  strings.py  test.py  unittest.py
test/test_domain/: test_json.py
test/test_ports/: test_for_browsing_code_tree.py  test_for_storing_data.py
test/test_utils/: test_cli.py  test_configure.py  test_int.py  test_ports.py  test_strings.py  test_test.py  test_unittest.py
(+278 files in other folders)
